[gd_scene load_steps=11 format=2]

[ext_resource path="res://Mobs/Health.gd" type="Script" id=1]
[ext_resource path="res://Mobs/WeakPoint.gd" type="Script" id=2]
[ext_resource path="res://assets/icon.png" type="Texture" id=3]
[ext_resource path="res://Mobs/InvulnFlicker.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 32.0
height = 48.0

[sub_resource type="Animation" id=3]
resource_name = "Invuln Flicker"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 72, 32 )

[sub_resource type="OpenSimplexNoise" id=4]
seed = 99
octaves = 2
period = 26.3
persistence = 0.344
lacunarity = 1.47

[sub_resource type="NoiseTexture" id=5]
width = 1200
height = 48
seamless = true
noise = SubResource( 4 )

[node name="Base" type="Node2D"]

[node name="Model" type="Node2D" parent="."]
position = Vector2( 800, 800 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Model"]
position = Vector2( -1.90735e-06, 4.00001 )
scale = Vector2( 2.25, 1.375 )
frames = SubResource( 1 )

[node name="WeakPoint" type="Area2D" parent="Model"]
collision_mask = 513
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Model/WeakPoint"]
position = Vector2( -6.10352e-05, -40.0001 )
shape = SubResource( 2 )

[node name="InvulnFlicker" type="AnimationPlayer" parent="Model"]
"anims/Invuln Flicker" = SubResource( 3 )
script = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Model"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Model/StaticBody2D"]
position = Vector2( 0, 16 )
shape = SubResource( 6 )

[node name="Health" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Bar" type="TextureRect" parent="Health"]
modulate = Color( 0.576471, 0, 0, 1 )
margin_left = 200.0
margin_top = 56.0
margin_right = 1400.0
margin_bottom = 104.0
texture = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Invulnerability" type="Timer" parent="Health"]
wait_time = 3.0
one_shot = true
[connection signal="area_entered" from="Model/WeakPoint" to="Model/WeakPoint" method="onAreaEntered"]
[connection signal="area_exited" from="Model/WeakPoint" to="Model/WeakPoint" method="onAreaExited"]
[connection signal="damageTaken" from="Model/WeakPoint" to="Health" method="takeDamage"]
[connection signal="startAnim" from="Health" to="Model/InvulnFlicker" method="startAnim"]
[connection signal="timeout" from="Health/Invulnerability" to="Model/InvulnFlicker" method="stopAnim"]
[connection signal="timeout" from="Health/Invulnerability" to="Health" method="onInvulnTimerEnd"]
